--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>290 Tagged Open Ruby Bugs as of 2024-11-18 14:07:43 +0900</title>
+<title>319 Tagged Open Ruby Bugs as of 2025-02-18 11:08:45 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -8,32 +8,35 @@
 <input type="submit" value="ractor" />
 <input type="submit" value="win" />
 <input type="submit" value="patch" />
-<input type="submit" value="os/arch" />
 <input type="submit" value="build" />
+<input type="submit" value="os/arch" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="ext" />
-<input type="submit" value="lib" />
 <input type="submit" value="regexp" />
+<input type="submit" value="lib" />
 <input type="submit" value="encoding" />
-<input type="submit" value="test" />
 <input type="submit" value="parser" />
-<input type="submit" value="perf" />
+<input type="submit" value="test" />
 <input type="submit" value="thread" />
 <input type="submit" value="cygwin" />
-<input type="submit" value="fiber" />
+<input type="submit" value="perf" />
 <input type="submit" value="notbug" />
+<input type="submit" value="fiber" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="coverage" />
 <input type="submit" value="doc" />
+<input type="submit" value="prism" />
 <input type="submit" value="autoload" />
 <input type="submit" value="mnthreads" />
 <input type="submit" value="yjit" />
+<input type="submit" value="backport" />
+<input type="submit" value="embed" />
 <input type="submit" value="mn_threads" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">290</span> matched)
+(<span id="matched">319</span> matched)
 <table>
-<caption>290 Tagged Open Ruby Bugs as of 2024-11-18 14:07:43 +0900</caption>
+<caption>319 Tagged Open Ruby Bugs as of 2025-02-18 11:08:45 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +45,300 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/21146">21146</a>
+</td>
+<td>patch ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21146">VM_ASSERT(expr) gives bad bug report results when another ractor fails an assertion during printing of report</a>
+</td>
+</tr>
+<tr class=" patch win core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21144">21144</a>
+</td>
+<td>patch win core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21144">Win32: Use Windows time zone ID as the time zone name if TZ is not set</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21142">21142</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21142">Lazy enumerator `.each_with_index` ignores `.take(0)` before it</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21141">21141</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21141">`Time#utc?` does not work with a timezone object</a>
+</td>
+</tr>
+<tr class=" parser prism ">
+<td><a href="https://bugs.ruby-lang.org/issues/21139">21139</a>
+</td>
+<td>parser prism</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21139">Prism and parse.y parses `it = it` differently</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21131">21131</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21131">IO.copy_stream: yielded string changes value when duped</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21125">21125</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21125">Kernel is called first</a>
+</td>
+</tr>
+<tr class=" mn_threads ">
+<td><a href="https://bugs.ruby-lang.org/issues/21120">21120</a>
+</td>
+<td>mn_threads</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21120">Segmentation fault when running Rails with MN threads enabled on 3.4.1</a>
+</td>
+</tr>
+<tr class=" perf notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/21119">21119</a>
+</td>
+<td>perf notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21119">Programs containing `Dir.glob` with a thread executing a CPU-heavy task run very slowly.</a>
+</td>
+</tr>
+<tr class=" ractor ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/21115">21115</a>
+</td>
+<td>ractor ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21115">Etc.getgrgid is not Ractor-safe but is marked as such</a>
+</td>
+</tr>
+<tr class=" build lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/21111">21111</a>
+</td>
+<td>build lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21111">RbConfig::CONFIG[&#39;CXX&#39;] quietly set to &quot;false&quot; when Ruby cannot build C++ programs</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/21108">21108</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21108">C-c (SIGINT) crashes ruby when looping Ractors are not taken?</a>
+</td>
+</tr>
+<tr class=" ext ">
+<td><a href="https://bugs.ruby-lang.org/issues/21104">21104</a>
+</td>
+<td>ext</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21104">Net::HTTP connections failing in Ruby &gt;= 3.4.0 on macOS with Happy Eyeballs enabled</a>
+</td>
+</tr>
+<tr class=" parser ">
+<td><a href="https://bugs.ruby-lang.org/issues/21097">21097</a>
+</td>
+<td>parser</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21097">`x = a rescue b in c` and `def f = a rescue b in c` parsed differently between parse.y and prism</a>
+</td>
+</tr>
+<tr class=" maybenotbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21096">21096</a>
+</td>
+<td>maybenotbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21096">`Process.fork` hangs up on QEMU when called multiple times.</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21094">21094</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21094">Module#set_temporary_name does not affect a name of a nested module</a>
+</td>
+</tr>
+<tr class=" patch ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/21090">21090</a>
+</td>
+<td>patch ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21090">SEGV from require in Thread in Ractor</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21089">21089</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21089">Missing methods on enumerators created from Enumerator::product and Enumerator::Chain</a>
+</td>
+</tr>
+<tr class=" win ">
+<td><a href="https://bugs.ruby-lang.org/issues/21083">21083</a>
+</td>
+<td>win</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21083">current SystemCallError.new(-1) behavior on windows is not in accordance with the intent of the source code.</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/21049">21049</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21049">Reconsider handling of the numbered parameters and &quot;it&quot; parameter in `Binding#local_variables`</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/21037">21037</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21037">Ractors hang with multiple threads</a>
+</td>
+</tr>
+<tr class=" parser prism ">
+<td><a href="https://bugs.ruby-lang.org/issues/21029">21029</a>
+</td>
+<td>parser prism</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21029">Prism behavior for `defined? (;x)` differs</a>
+</td>
+</tr>
+<tr class=" maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/21026">21026</a>
+</td>
+<td>maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21026">`def __FILE__.a; end` should be a syntax error</a>
+</td>
+</tr>
+<tr class=" build os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/21023">21023</a>
+</td>
+<td>build os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21023">Unintentional ruby/spec capi extension build twice </a>
+</td>
+</tr>
+<tr class=" parser prism ">
+<td><a href="https://bugs.ruby-lang.org/issues/21016">21016</a>
+</td>
+<td>parser prism</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21016">What should massign with `shareable_constant_value: experimental_everything` freeze?</a>
+</td>
+</tr>
+<tr class=" patch ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/21007">21007</a>
+</td>
+<td>patch ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/21007">Ractor scheduler issue when multiple threads in a ractor</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20998">20998</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20998">rb_str_locktmp() changes flags of frozen strings and string literals</a>
+</td>
+</tr>
+<tr class=" embed ">
+<td><a href="https://bugs.ruby-lang.org/issues/20996">20996</a>
+</td>
+<td>embed</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20996">Embed Ruby 3.4 Failure</a>
+</td>
+</tr>
+<tr class=" notbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20968">20968</a>
+</td>
+<td>notbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20968">`Array#fetch_values` unexpected method name in stack trace</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20965">20965</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20965">`it` vs `binding.local_variables`</a>
+</td>
+</tr>
+<tr class=" win core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20958">20958</a>
+</td>
+<td>win core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20958">fix ENV.keys encoding on windows</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20957">20957</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20957">RangeError on Array#values_at with negative ranges</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20948">20948</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20948">Constant references incorrectly cached in `module (expr)::Foo`</a>
+</td>
+</tr>
+<tr class=" notbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20943">20943</a>
+</td>
+<td>notbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20943">Constant defined in `Data.define` block</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/20934">20934</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20934">`UnboundMethod#bind_call` may cause &quot;double free or corruption&quot; with Ractor</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20929">20929</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20929">TestTime have an assertion different from current implementation.</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20920">20920</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20920">When loading a file, __FILE__ gets relative paths expanded only when they start with &quot;./&quot;</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/20919">20919</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20919">IO#seek and IO#pos= do not clear the character buffer in some cases while transcoding</a>
+</td>
+</tr>
+<tr class=" parser prism ">
+<td><a href="https://bugs.ruby-lang.org/issues/20917">20917</a>
+</td>
+<td>parser prism</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20917">redo/next in nested begin block causes wrong order of execution</a>
+</td>
+</tr>
+<tr class=" backport ">
+<td><a href="https://bugs.ruby-lang.org/issues/20906">20906</a>
+</td>
+<td>backport</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20906">Segmentation Fault in compile_keyword_arg</a>
+</td>
+</tr>
+<tr class=" patch ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/20905">20905</a>
+</td>
+<td>patch ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20905">Ruby VM hangs while using ractors</a>
+</td>
+</tr>
+<tr class=" win build ">
+<td><a href="https://bugs.ruby-lang.org/issues/20904">20904</a>
+</td>
+<td>win build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/20904">3.4.0-preview2: Building miniruby.exe fails for mswin32</a>
+</td>
+</tr>
 <tr class=" lib patch ">
 <td><a href="https://bugs.ruby-lang.org/issues/20897">20897</a>
 </td>
@@ -84,34 +381,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/20872">Undefined RUBY_API_VERSION_* macros used in &lt;ruby/backward/cxxanyargs.hpp&gt;</a>
 </td>
 </tr>
-<tr class=" parser ">
-<td><a href="https://bugs.ruby-lang.org/issues/20866">20866</a>
-</td>
-<td>parser</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20866">Prism assertion when running simplecov with branch coverage and requiring certain code</a>
-</td>
-</tr>
-<tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/20863">20863</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20863">`zlib.c` calls `rb_str_set_len` and `rb_str_modify_expand`(and others) without holding the GVL.</a>
-</td>
-</tr>
-<tr class=" lib patch ">
-<td><a href="https://bugs.ruby-lang.org/issues/20862">20862</a>
-</td>
-<td>lib patch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20862">gem install --document=rdoc,ri fails with some gem</a>
-</td>
-</tr>
-<tr class=" parser notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/20858">20858</a>
-</td>
-<td>parser notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20858">multiple parallel assignments are inconsistent</a>
-</td>
-</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/20854">20854</a>
 </td>
@@ -124,13 +393,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/20819">IO#readline does not process newlines correctly for wide character encodings</a>
-</td>
-</tr>
-<tr class=" parser ">
-<td><a href="https://bugs.ruby-lang.org/issues/20817">20817</a>
-</td>
-<td>parser</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20817">Ruby 3.4.0dev emits `warning: possibly useless use of + in void context` while Ruby 3.3.5 does not</a>
 </td>
 </tr>
 <tr class=" perf ">
@@ -161,13 +423,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/20807">String#gsub fails when called from string subclass with a block passed</a>
 </td>
 </tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/20795">20795</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20795">Timeout method doesn&#39;t check for negative time values</a>
-</td>
-</tr>
 <tr class=" parser ">
 <td><a href="https://bugs.ruby-lang.org/issues/20790">20790</a>
 </td>
@@ -175,25 +430,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/20790">Syntax acceptance of `*x = p rescue p 1` is different between parse.y and prism</a>
 </td>
 </tr>
-<tr class=" parser ">
-<td><a href="https://bugs.ruby-lang.org/issues/20785">20785</a>
-</td>
-<td>parser</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20785">Should `a in b, and c` `a in b, or c` `a in b, rescue c` be syntax ok?</a>
-</td>
-</tr>
 <tr class=" os/arch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/20780">20780</a>
 </td>
 <td>os/arch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/20780">related to #20779 -- crash creating large number of concurrent-ruby promises</a>
-</td>
-</tr>
-<tr class=" os/arch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/20779">20779</a>
-</td>
-<td>os/arch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20779">Un-rescuable thread creation limit on Mac</a>
 </td>
 </tr>
 <tr class=" parser ">
@@ -294,25 +535,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/20666">Segmentation fault instead of LoadError exception</a>
 </td>
 </tr>
-<tr class=" perf maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/20659">20659</a>
-</td>
-<td>perf maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20659">Speed regression of `parse.y` parser after numeric nodes were introduced</a>
-</td>
-</tr>
 <tr class=" maybenotbug yjit ">
 <td><a href="https://bugs.ruby-lang.org/issues/20642">20642</a>
 </td>
 <td>maybenotbug yjit</td>
 <td><a href="https://bugs.ruby-lang.org/issues/20642">YJIT prevents hardening</a>
-</td>
-</tr>
-<tr class=" mn_threads ">
-<td><a href="https://bugs.ruby-lang.org/issues/20638">20638</a>
-</td>
-<td>mn_threads</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20638">Threads not collected by GC under RUBY_MN_THREADS=1</a>
 </td>
 </tr>
 <tr class=" build os/arch ">
@@ -341,20 +568,6 @@
 </td>
 <td>win core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/20526">File.open(encoding: &quot;bom|utf-8&quot;) converts &quot;\r\n&quot; to &quot;\n&quot; on Windows</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/20504">20504</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20504">Interpolated string literal in regexp encoding handling</a>
-</td>
-</tr>
-<tr class=" ractor perf ">
-<td><a href="https://bugs.ruby-lang.org/issues/20489">20489</a>
-</td>
-<td>ractor perf</td>
-<td><a href="https://bugs.ruby-lang.org/issues/20489">Ractor behavior strange in ruby master</a>
 </td>
 </tr>
 <tr class=" win build ">
@@ -915,13 +1128,6 @@
 </td>
 <td>tracepoint maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/19598">Inconsistent behaviour of TracePoint API</a>
-</td>
-</tr>
-<tr class=" ractor ">
-<td><a href="https://bugs.ruby-lang.org/issues/19562">19562</a>
-</td>
-<td>ractor</td>
-<td><a href="https://bugs.ruby-lang.org/issues/19562">Setting default_(in|ex)ternal encoding after running an Ractor freezes ruby</a>
 </td>
 </tr>
 <tr class=" core patch ">
